Bug 513318 - visibility:collapse causes scrollbar issues for XUL elements, r=roc